--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTugK7x3p2eSrbRh2l7sNs",
+      "authorship_tag": "ABX9TyPW7v7E322w7cKQvXWaTcbk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,7 +187,10 @@
         "    features = [i for i in data if i != 0]\n",
         "    totel_features.append(features)\n",
         "  lengths = [len(i) for i in totel_features]\n",
-        "  bucket = np.zeros_like(totel_features[0])\n",
+        "\n",
+        "\n",
+        "  max_len = max([len(i) for i in totel_features])\n",
+        "  bucket = np.zeros(max_len)\n",
         "  for i in totel_features:\n",
         "    index = 0\n",
         "    for j in i:\n",
@@ -207,23 +210,57 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
+          "base_uri": "https://localhost:8080/"
         },
         "id": "mkGuc6zlHQ1M",
-        "outputId": "7a82c65b-11d0-4dbc-d793-8c04c5e8f56d"
+        "outputId": "51c93c92-1b84-408d-cce4-773d6170a22c"
       },
-      "execution_count": 161,
+      "execution_count": 167,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-161-902202a86f9a>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mbucket\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m       \u001b[0mindex\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m   \u001b[0mbucket\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbucket\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: index 8439 is out of bounds for axis 0 with size 8439"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------------------------  ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+            "Treatment:                             ['Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip', 'Drip']\n",
+            "Total # of Features for Each Sample:   [8439, 8204, 496, 8500, 8274, 573, 8650, 8094, 7841, 444, 507, 8353, 523, 8341, 7868, 8247, 8447, 8332, 7643, 7757, 8017, 446, 8938, 8822, 7137, 473, 368, 412, 297, 472, 443, 329, 429, 470, 386, 436, 7435, 8333, 8375, 403, 336, 439, 7999, 7927, 8464, 398, 343, 371, 8552, 8431, 492]\n",
+            "Average # of Features by Treatment:    [4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784, 4543.254901960784]\n",
+            "StdErr of # of Features by Treatment:  [2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969, 2268.55027375969]\n",
+            "StdErr of # of Features by Treatment:  [98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98]\n",
+            "# of Features in only One Replicate:   [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "# of Features per Treatment:           [8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938, 8938]\n",
+            "-------------------------------------  ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+            "\n",
+            "-------------------------------------  ------------------------------------------------------------------------------------------------------------------------\n",
+            "Treatment:                             ['Steam', 'Steam', 'Steam', 'Steam', 'Steam', 'Steam']\n",
+            "Total # of Features for Each Sample:   [6761, 6663, 480, 8578, 8970, 8892]\n",
+            "Average # of Features by Treatment:    [6724.0, 6724.0, 6724.0, 6724.0, 6724.0, 6724.0]\n",
+            "StdErr of # of Features by Treatment:  [1865.0233599966873, 1865.0233599966873, 1865.0233599966873, 1865.0233599966873, 1865.0233599966873, 1865.0233599966873]\n",
+            "StdErr of # of Features by Treatment:  [1817, 1817, 1817, 1817, 1817, 1817]\n",
+            "# of Features in only One Replicate:   [0, 0, 0, 0, 0, 0]\n",
+            "# of Features per Treatment:           [8970, 8970, 8970, 8970, 8970, 8970]\n",
+            "-------------------------------------  ------------------------------------------------------------------------------------------------------------------------\n",
+            "\n",
+            "-------------------------------------  ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+            "Treatment:                             ['Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press', 'Press']\n",
+            "Total # of Features for Each Sample:   [306, 375, 423, 347, 480, 356, 400, 327, 299, 436, 334, 398, 353, 376, 346, 470, 376, 369, 261, 308, 395, 303, 388, 336]\n",
+            "Average # of Features by Treatment:    [365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333, 365.0833333333333]\n",
+            "StdErr of # of Features by Treatment:  [31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714, 31.081434258340714]\n",
+            "StdErr of # of Features by Treatment:  [13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13]\n",
+            "# of Features in only One Replicate:   [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "# of Features per Treatment:           [480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480, 480]\n",
+            "-------------------------------------  ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+            "\n",
+            "-------------------------------------  ------------------------------------------------------------\n",
+            "Treatment:                             ['Instant', 'Instant', 'Instant']\n",
+            "Total # of Features for Each Sample:   [392, 401, 306]\n",
+            "Average # of Features by Treatment:    [366.3333333333333, 366.3333333333333, 366.3333333333333]\n",
+            "StdErr of # of Features by Treatment:  [30.278338424982604, 30.278338424982604, 30.278338424982604]\n",
+            "StdErr of # of Features by Treatment:  [306, 306, 306]\n",
+            "# of Features in only One Replicate:   [0, 0, 0]\n",
+            "# of Features per Treatment:           [401, 401, 401]\n",
+            "-------------------------------------  ------------------------------------------------------------\n",
+            "\n"
           ]
         }
       ]
@@ -298,9 +335,13 @@
         "# 4. Plot a Histogram of your prefered dataset. Is your data normal?\n",
         "If we ignored the outliers, the data is mostly normal. When included the outliers, it sis bimodal\n",
         "# 5. Does your data have any skew or kertosis?\n",
-        "All of them are some what kertosis at the center.\n",
+        "All of them are some what kertosis at the center. And all of they are skew right\n",
         "\n",
-        "# 6. What type of statistics are most appropriate to determine significance of this data?"
+        "# 6. What type of statistics are most appropriate to determine significance of this data?\n",
+        "\n",
+        "Wilcoxon-Mann-Whitney test\n",
+        "\n",
+        "https://stats.stackexchange.com/questions/233443/how-to-test-for-statistical-differences-between-sets-of-skewed-data#:~:text=A%20t%2Dtest%20will%20often,transformed%20(e.g.%20logarithmic)%20scale."
       ],
       "metadata": {
         "id": "lqrBi7-gV_AA"
