--- a/Test_SMILES.ipynb
+++ b/Test_SMILES.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmnw25O9SPFmOfQKVDcFPs",
+      "authorship_tag": "ABX9TyPg6wNOUSYOk1ukqoB0JNAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -604,6 +604,19 @@
     {
       "cell_type": "code",
       "source": [
+        "reversed_word_map = {}\n",
+        "for i in transformer_.word_map.keys():\n",
+        " reversed_word_map[transformer_.word_map[i]] = i\n"
+      ],
+      "metadata": {
+        "id": "ztNaZ26N7wOR"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import wandb\n",
         "print(\"Started\")\n",
         "\n",
@@ -638,10 +651,9 @@
         "     pass\n",
         " return torch.tensor(np.array(imgs), dtype=torch.float32), ti, to\n",
         "\n",
-        "for epoch in range(30):\n",
-        "  np.random.shuffle(files)\n",
-        "  print('EPOCH {}:'.format(epoch + 1))\n",
-        "  model.train(True)\n",
+        "Test = True\n",
+        "if Test:\n",
+        "  model.train(False)\n",
         "  running_loss = 0\n",
         "  last_loss = 0\n",
         "  for i in range(10, len(files)//BATCH_SIZE-1):\n",
@@ -650,8 +662,21 @@
         "    Xs_text = []\n",
         "    y = []\n",
         "\n",
-        "    Xs_img, text_in, text_out = getitem(start_index)\n",
+        "    image, text_in, text_out = getitem(start_index)\n",
+        "    image = image.to(device)\n",
+        "    text_out = pad_pack(text_out)[0].to(device)\n",
+        "    padded_x = pad_pack(text_in)\n",
+        "    xmask = triangle_mask(padded_x[1]).to(device)\n",
+        "    image = torch.permute(image, (0, 3, 1, 2))\n",
+        "    text_in = padded_x[0].to(device)\n",
         "\n",
+        "    outputs = model(image, text_in, xmask)[0].cpu().detach().numpy()\n",
+        "    print(\"Teacher forcing Predicted output:\\t\\t\", \"\".join([reversed_word_map[np.argmax(i)] for i in outputs]))\n",
+        "    print(\"Token by Token Output: \", \"\".join([reversed_word_map[np.argmax(i)] for i in gen(image, [[77]])]))\n",
+        "    print(\"Correct output:\\t\\t\", \",\".join([reversed_word_map[i] for i in text_out[0].detach().cpu().numpy()]))\n",
+        "    print()\n",
+        "else:\n",
+        "  for epoch in range(30):\n",
         "    image = Xs_img.to(device) #mutli process cannot use cuda so moved here\n",
         "    image = torch.permute(image, (0, 3, 1, 2))\n",
         "    text_out = pad_pack(text_out)[0].to(device)\n",
@@ -693,10 +718,22 @@
         "        model.train(True)"
       ],
       "metadata": {
-        "id": "0ox3u4v-69bA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ox3u4v-69bA",
+        "outputId": "dbc4d8eb-4275-4654-ff0c-c4c3ae228a9c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Started\n"
+          ]
+        }
+      ]
     }
   ]
 }
