working, just need magic number

--- a/Test_SMILES.ipynb
+++ b/Test_SMILES.ipynb
@@ -12,135 +12,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "AnyVcrxlz1Rc",
-        "outputId": "906fa23f-96d0-4e17-dc5b-eed001ffaee5"
+        "id": "AnyVcrxlz1Rc"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2023-11-12 03:51:03 URL:http://file.weasoft.com/main.pb [510999187/510999187] -> \"main.pb\" [1]\n",
-            "2023-11-12 03:51:06 URL:http://file.weasoft.com/80k.csv [172176229/172176229] -> \"80k.csv\" [1]\n",
-            "2023-11-12 03:51:52 URL:http://file.weasoft.com/swin_transform_focalloss.pth [2555716718/2555716718] -> \"swin_transform_focalloss.pth\" [1]\n",
-            "--2023-11-12 03:51:52--  http://file.weasoft.com/80k.zip\n",
-            "Resolving file.weasoft.com (file.weasoft.com)... 149.28.13.194\n",
-            "Connecting to file.weasoft.com (file.weasoft.com)|149.28.13.194|:80... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 3356218517 (3.1G) [application/zip]\n",
-            "Saving to: ‘80k.zip’\n",
-            "\n",
-            "80k.zip             100%[===================>]   3.12G  54.3MB/s    in 60s     \n",
-            "\n",
-            "2023-11-12 03:52:53 (53.0 MB/s) - ‘80k.zip’ saved [3356218517/3356218517]\n",
-            "\n",
-            "Collecting torch_xla\n",
-            "  Downloading torch_xla-2.1.0-cp310-cp310-manylinux_2_28_x86_64.whl (81.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m81.1/81.1 MB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: absl-py>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from torch_xla) (1.4.0)\n",
-            "Collecting cloud-tpu-client>=0.10.0 (from torch_xla)\n",
-            "  Downloading cloud_tpu_client-0.10-py3-none-any.whl (7.4 kB)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.10/dist-packages (from torch_xla) (6.0.1)\n",
-            "Collecting google-api-python-client==1.8.0 (from cloud-tpu-client>=0.10.0->torch_xla)\n",
-            "  Downloading google_api_python_client-1.8.0-py3-none-any.whl (57 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.7/57.7 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: oauth2client in /usr/local/lib/python3.10/dist-packages (from cloud-tpu-client>=0.10.0->torch_xla) (4.1.3)\n",
-            "Requirement already satisfied: httplib2<1dev,>=0.9.2 in /usr/local/lib/python3.10/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (0.22.0)\n",
-            "Requirement already satisfied: google-auth>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (2.17.3)\n",
-            "Requirement already satisfied: google-auth-httplib2>=0.0.3 in /usr/local/lib/python3.10/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (0.1.1)\n",
-            "Collecting google-api-core<2dev,>=1.13.0 (from google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla)\n",
-            "  Downloading google_api_core-1.34.0-py3-none-any.whl (120 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m120.2/120.2 kB\u001b[0m \u001b[31m15.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: six<2dev,>=1.6.1 in /usr/local/lib/python3.10/dist-packages (from google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (1.16.0)\n",
-            "Collecting uritemplate<4dev,>=3.0.0 (from google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla)\n",
-            "  Downloading uritemplate-3.0.1-py2.py3-none-any.whl (15 kB)\n",
-            "Requirement already satisfied: pyasn1>=0.1.7 in /usr/local/lib/python3.10/dist-packages (from oauth2client->cloud-tpu-client>=0.10.0->torch_xla) (0.5.0)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.0.5 in /usr/local/lib/python3.10/dist-packages (from oauth2client->cloud-tpu-client>=0.10.0->torch_xla) (0.3.0)\n",
-            "Requirement already satisfied: rsa>=3.1.4 in /usr/local/lib/python3.10/dist-packages (from oauth2client->cloud-tpu-client>=0.10.0->torch_xla) (4.9)\n",
-            "Requirement already satisfied: googleapis-common-protos<2.0dev,>=1.56.2 in /usr/local/lib/python3.10/dist-packages (from google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (1.61.0)\n",
-            "Requirement already satisfied: protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<4.0.0dev,>=3.19.5 in /usr/local/lib/python3.10/dist-packages (from google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (3.20.3)\n",
-            "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in /usr/local/lib/python3.10/dist-packages (from google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (2.31.0)\n",
-            "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from google-auth>=1.4.1->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (5.3.2)\n",
-            "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /usr/local/lib/python3.10/dist-packages (from httplib2<1dev,>=0.9.2->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (3.1.1)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.13.0->google-api-python-client==1.8.0->cloud-tpu-client>=0.10.0->torch_xla) (2023.7.22)\n",
-            "Installing collected packages: uritemplate, google-api-core, google-api-python-client, cloud-tpu-client, torch_xla\n",
-            "  Attempting uninstall: uritemplate\n",
-            "    Found existing installation: uritemplate 4.1.1\n",
-            "    Uninstalling uritemplate-4.1.1:\n",
-            "      Successfully uninstalled uritemplate-4.1.1\n",
-            "  Attempting uninstall: google-api-core\n",
-            "    Found existing installation: google-api-core 2.11.1\n",
-            "    Uninstalling google-api-core-2.11.1:\n",
-            "      Successfully uninstalled google-api-core-2.11.1\n",
-            "  Attempting uninstall: google-api-python-client\n",
-            "    Found existing installation: google-api-python-client 2.84.0\n",
-            "    Uninstalling google-api-python-client-2.84.0:\n",
-            "      Successfully uninstalled google-api-python-client-2.84.0\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "pydrive2 1.6.3 requires google-api-python-client>=1.12.5, but you have google-api-python-client 1.8.0 which is incompatible.\n",
-            "earthengine-api 0.1.377 requires google-api-python-client>=1.12.1, but you have google-api-python-client 1.8.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed cloud-tpu-client-0.10 google-api-core-1.34.0 google-api-python-client-1.8.0 torch_xla-2.1.0 uritemplate-3.0.1\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "google"
-                ]
-              }
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting deepsmiles\n",
-            "  Downloading deepsmiles-1.0.1-py2.py3-none-any.whl (12 kB)\n",
-            "Collecting yacs\n",
-            "  Downloading yacs-0.1.8-py3-none-any.whl (14 kB)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (4.66.1)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from yacs) (6.0.1)\n",
-            "Installing collected packages: deepsmiles, yacs\n",
-            "Successfully installed deepsmiles-1.0.1 yacs-0.1.8\n",
-            "Cloning into 'SwinOCSR'...\n",
-            "remote: Enumerating objects: 453, done.\u001b[K\n",
-            "remote: Counting objects: 100% (174/174), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (132/132), done.\u001b[K\n",
-            "remote: Total 453 (delta 104), reused 77 (delta 42), pack-reused 279\u001b[K\n",
-            "Receiving objects: 100% (453/453), 220.65 MiB | 44.66 MiB/s, done.\n",
-            "Resolving deltas: 100% (201/201), done.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "!wget http://file.weasoft.com/main.pb -nv\n",
-        "!wget http://file.weasoft.com/80k.csv -nv\n",
-        "!wget http://file.weasoft.com/swin_transform_focalloss.pth -nv\n",
-        "!wget http://file.weasoft.com/80k.zip\n",
-        "!unzip -q 80k.zip\n",
-        "!pip3 install torch_xla\n",
-        "!pip3 install deepsmiles yacs tqdm\n",
-        "!git clone https://github.com/suanfaxiaohuo/SwinOCSR.git\n",
-        "!pip install focal_loss_torch wandb"
+        "# !wget http://file.weasoft.com/main.pb -nv\n",
+        "# !wget http://file.weasoft.com/80k.csv -nv\n",
+        "# !wget http://file.weasoft.com/swin_transform_focalloss.pth -nv\n",
+        "# !wget http://file.weasoft.com/80k.zip\n",
+        "# !unzip -q 80k.zip\n",
+        "# !pip3 install torch_xla\n",
+        "# !pip3 install deepsmiles yacs tqdm\n",
+        "# !git clone https://github.com/suanfaxiaohuo/SwinOCSR.git\n",
+        "# !pip install focal_loss_torch wandb"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "rovlreP90bP5"
       },
@@ -157,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "KA3vnh8U1Nkd"
       },
@@ -177,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "au-7ZSY81Slk"
       },
@@ -206,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "BL5Wdj831EqV"
       },
@@ -231,11 +122,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "xWiFh9bA1wUV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xWiFh9bA1wUV",
+        "outputId": "081ced70-b6bc-4130-c9b9-e00217799457"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=====> ./swin_transform_focalloss.pth <=====\n",
+            "Decoder: <All keys matched successfully>\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['cid', 'cmpdname', 'cmpdsynonym', 'mw', 'mf', 'polararea', 'complexity',\n",
+              "       'xlogp', 'heavycnt', 'hbonddonor', 'hbondacc', 'rotbonds', 'inchi',\n",
+              "       'isosmiles', 'canonicalsmiles', 'inchikey', 'iupacname', 'exactmass',\n",
+              "       'monoisotopicmass', 'charge', 'covalentunitcnt', 'isotopeatomcnt',\n",
+              "       'totalatomstereocnt', 'definedatomstereocnt', 'undefinedatomstereocnt',\n",
+              "       'totalbondstereocnt', 'definedbondstereocnt', 'undefinedbondstereocnt',\n",
+              "       'pclidcnt', 'gpidcnt', 'gpfamilycnt', 'neighbortype', 'meshheadings',\n",
+              "       'annothits', 'annothitcnt', 'aids', 'cidcdate', 'sidsrcname', 'depcatg',\n",
+              "       'annotation'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
         "class FocalLossModelInference:\n",
         "    \"\"\"\n",
@@ -314,11 +237,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "9L9d_nQJ2V_m"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9L9d_nQJ2V_m",
+        "outputId": "f70f4111-dc3e-4d12-f71a-ce600bb6bfbd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OOHH\n"
+          ]
+        }
+      ],
       "source": [
         "Ys = {}\n",
         "invalid_cids = []\n",
@@ -334,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "Vt1J6ydd6cht"
       },
@@ -409,12 +344,12 @@
       "metadata": {
         "id": "Y5ta9TW7ou_5"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
         "id": "DwuU7Rrp53Sw"
       },
@@ -547,16 +482,15 @@
         "    self.encoder = encoder\n",
         "    self.decoder = decoder\n",
         "\n",
-        "  def forward(self, image, text_in_, max_len, beam=1):\n",
+        "  def forward(self, image, text_in_, max_len, beam=4): #just changed beam=1 and it runs so beam cannot be random number???  yeah it has to been factor of 676, which is 2 2 13 13 but original paper did not use beam search\n",
         "    image_feature = self.encoder(image)\n",
-        "    conf = 1\n",
-        "    top_n = list(torch.tensor(text_in_).repeat(beam,1).detach().cpu().numpy())\n",
+        "    top_n = list([list(i) for i in torch.tensor(text_in_).repeat(beam,1).detach().cpu().numpy()])\n",
         "    top_n_conf = torch.tensor([1] * beam).to(device)\n",
         "    for i in range(max_len):\n",
-        "      print(top_n)\n",
-        "      padded_text = pad_pack(top_n)[0]\n",
+        "      # print(top_n)\n",
+        "      padded_text = torch.tensor(top_n)\n",
         "      padded_text = padded_text.to(device)\n",
-        "      out = self.decoder(padded_text, image_feature, x_mask=triangle_mask(len(top_n[0])).to(device))\n",
+        "      out = self.decoder(torch.tensor(padded_text), image_feature, x_mask=triangle_mask(i+1).to(device))\n",
         "      out = out[:,-1,:]\n",
         "      # next = torch.topk(out, beam, dim=-1) it is not top k it is sort since we need all of them?\n",
         "      # sorted = torch.sort(out, -1)\n",
@@ -569,12 +503,13 @@
         "      top_n_ = []\n",
         "      indices2d = np.array(np.unravel_index(next.indices.cpu().numpy(), out.shape)).T\n",
         "      for j in indices2d:\n",
-        "        top_n_.append(top_n[j[0]]+[j[1]])\n",
+        "        top_n_.append(list(top_n[j[0]])+list([j[1]]))\n",
         "      top_n = top_n_\n",
         "      # print(next)\n",
         "      # conf = conf * softmax(torch.sort(out, descending=True)[0][0].cpu().detach().numpy())[0][0]\n",
         "\n",
         "      # print(text_in)\n",
+        "    print(top_n_conf)\n",
         "    return top_n\n",
         "\n",
         "\n",
@@ -602,10 +537,31 @@
         "torch.topk(torch.tensor([[0.1,0.2,0.3],[0.2, 0.6, 0.9],[0.9, 0.7, 0.1]]), 1)"
       ],
       "metadata": {
-        "id": "W-zo-d-bJljT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W-zo-d-bJljT",
+        "outputId": "71f437a3-cbf0-4be4-9254-6dfa86cd408b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.return_types.topk(\n",
+              "values=tensor([[0.3000],\n",
+              "        [0.9000],\n",
+              "        [0.9000]]),\n",
+              "indices=tensor([[2],\n",
+              "        [2],\n",
+              "        [0]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -615,14 +571,34 @@
         "torch.broadcast_to(torch.tensor([0.9, 0.1, 0.2]), (10, 3)).T * torch.rand((3, 10))\n"
       ],
       "metadata": {
-        "id": "TLzC4Bp8MXbs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TLzC4Bp8MXbs",
+        "outputId": "4c2624a3-a9d3-48c4-947e-1706776f8f40"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.7744, 0.3991, 0.0475, 0.6683, 0.1745, 0.1866, 0.3391, 0.2303, 0.4272,\n",
+              "         0.0091],\n",
+              "        [0.0465, 0.0467, 0.0317, 0.0141, 0.0274, 0.0796, 0.0392, 0.0560, 0.0351,\n",
+              "         0.0769],\n",
+              "        [0.0470, 0.1398, 0.0448, 0.1876, 0.0311, 0.1456, 0.0763, 0.0431, 0.1516,\n",
+              "         0.0944]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "ztNaZ26N7wOR"
       },
@@ -654,7 +630,7 @@
         "print(\"Started\")\n",
         "\n",
         "optimizer = torch.optim.AdamW(\n",
-        "    model.parameters(),\n",
+        "   model.parameters(),\n",
         "   lr=0.0003)\n",
         "\n",
         "\n",
@@ -764,7 +740,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAuQHOjwBGVWh+k2PLY+2J",
+      "authorship_tag": "ABX9TyNLGw+eNa64pWSH4Hgh2wQk",
       "include_colab_link": true
     },
     "kernelspec": {
